--- a/index.html
+++ b/index.html
@@ -4,102 +4,285 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
     <title>Compound Interest Calculator</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+
     <div class="container mt-5">
-        <div class="card shadow">
-            <div class="card-body">
-                <h1 class="card-title text-center mb-4">Compound Interest Calculator</h1>
+        <h1 class="mb-4">Compound Interest Calculator</h1>
 
-                <div class="mb-3">
-                    <label for="solve" class="form-label">Select Calculation:</label>
-                    <select name="solve" id="solve" class="form-control">
-                        <option selected value="4">¿Cuánto puedo ahorrar?</option>
-                        <option value="1">¿Cuánto tardaré en alcanzar mi objetivo de ahorro?</option>
-                        <option value="2">¿Cuánto necesito ahorrar cada periodo para alcanzar mi objetivo de ahorro?
-                        </option>
-                        <option value="3">¿Qué porcentaje de interés necesito para alcanzar mi objetivo de ahorro?
-                        </option>
-                    </select>
-                </div>
+        <div class="form-group">
+            <label for="calculationType">Select Calculation Type:</label>
+            <select class="form-control" id="calculationType">
+                <option value="savings">¿Cuánto puedo ahorrar?</option>
+                <option value="time">¿Cuánto tardaré en alcanzar mi objetivo de ahorro?</option>
+                <option value="periodicSaving">¿Cuánto necesito ahorrar cada periodo para alcanzar mi objetivo de
+                    ahorro?</option>
+                <option value="interestRate">¿Qué porcentaje de interés necesito para alcanzar mi objetivo de ahorro?
+                </option>
+            </select>
+        </div>
 
-                <!-- Add Bootstrap spacing and styling to form elements -->
-                <div class="mb-3 conditional-input" id="initialBalanceInput">
-                    <label for="initialBalance" class="form-label">Balance Inicial:</label>
-                    <input type="number" class="form-control" id="initialBalance" placeholder="Enter initial balance">
-                </div>
+        <div class="form-group">
+            <label for="principal">Balance Inicial:</label>
+            <input type="number" class="form-control" id="principal" placeholder="Enter initial balance">
+        </div>
 
-                <div class="mb-3">
-                    <label for="fv-periodic-deposit" class="form-label">Depósito Periódico</label>
-                    <div class="input-group">
-                        <span class="input-group-addon">€</span>
-                        <input type="number" name="periodic_deposit" id="fv-periodic-deposit" class="form-control"
-                            min="0" step="0.01" required>
-                        <span class="input-group-addon">
-                            <select name="deposit_frequency" id="fv-deposit-frequency" class="form-control">
-                                <option value="52">Semanalmente (52/Año)</option>
-                                <option value="26">Bi-Semanalmente (26/Año)</option>
-                                <option selected value="12">Mensualmente (12/Año)</option>
-                                <option value="1">Anualmente (1/Año)</option>
-                            </select>
-                        </span>
-                    </div>
-                </div>
-                <div class="form-group mb-3">
-                    <label for="fv-deposit-timing" class="control-label">Tiempo</label>
-                    <select name="deposit_timing" id="fv-deposit-timing" class="form-control">
-                        <option selected="selected" value="1">Haces los depósitos al inicio de cada periodo</option>
-                        <option value="0">Haces los depósitos al final de cada periodo</option>
-                    </select>
-                </div>
+        <div class="form-group">
+            <label for="deposit">Depósito Periódico:</label>
+            <input type="number" class="form-control" id="deposit" placeholder="Enter periodic deposit">
+        </div>
 
-                <div class="form-group mb-3">
-                    <label for="fv-interest-rate" class="control-label">Ratio Interés Anual</label>
-                    <div class="input-group">
-                        <input type="number" name="interest_rate" id="fv-interest-rate" class="form-control" min="0"
-                            max="99" step="0.001" required="required">
-                        <span class="input-group-addon">%</span>
-                    </div>
-                </div>
+        <div class="form-group">
+            <label for="depositFrequency">Frecuencia de Depósito:</label>
+            <select class="form-control" id="depositFrequency">
+                <option value="52">Semanalmente (52/Año)</option>
+                <option value="26">Bi-Semanalmente (26/Año)</option>
+                <option selected="selected" value="12">Mensualmente (12/Año)</option>
+                <option value="1">Anualmente (1/Año)</option>
+            </select>
+        </div>
 
-                <div class="form-group mb-3">
-                    <label for="fv-term" class="control-label">Duración</label>
-                    <div class="input-group">
-                        <input type="number" name="term" id="fv-term" class="form-control" min="1" max="50" step="1"
-                            required="required">
-                        <span class="input-group-addon">años</span>
-                    </div>
-                </div>
+        <div class="form-group">
+            <label for="rate">Ratio Interés Anual (%):</label>
+            <input type="number" class="form-control" id="rate" placeholder="Enter annual interest rate">
+        </div>
 
-                <!-- Add Bootstrap styling to other form elements -->
+        <div class="form-group">
+            <label for="time">Tiempo (en años):</label>
+            <input type="number" class="form-control" id="time" placeholder="Enter time in years">
+        </div>
 
-                <button class="btn btn-warning" onclick="calculateCompoundInterest()">Calculate</button>
+        <div class="form-group">
+            <label for="depositTiming">Momento del Depósito:</label>
+            <select class="form-control" id="depositTiming">
+                <option value="end">Al final de cada periodo</option>
+                <option value="start">Al inicio de cada periodo</option>
+            </select>
+        </div>
 
-                <div id="result" class="mt-3 font-weight-bold">
-                    <!-- Table to display results -->
-                    <table class="table mt-4">
-                        <thead>
-                            <tr>
-                                <th>Año</th>
-                                <th>Depósito Periódico</th>
-                                <th>Depósitos totales</th>
-                                <th>Interés total</th>
-                                <th>Balance</th>
-                            </tr>
-                        </thead>
-                        <tbody id="resultTableBody"></tbody>
-                    </table>
-                </div>
+        <button type="button" class="btn btn-primary" onclick="calculate()">Calcular</button>
+
+
+
+        <div class="form-group">
+            <label for="result">Resultado:</label>
+            <!-- <canvas id="pieChart" width="400" height="400"></canvas> -->
+            <div id="calculatedSavings" class="alert alert-success mt-3" role="alert">
+                Puedes ahorrar <span id="savingsAmount">0.00 €</span>
+                ahorrando <span id="monthlyDeposit">0.00 €</span> mensual durante <span id="savingYears">0</span> años.
+            </div>
+            <div id="resultTable" class="table-responsive">
+                <!-- Result table will be displayed here -->
             </div>
         </div>
+
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script>
+        function calculate() {
+            var principal = parseFloat(document.getElementById('principal').value);
+            var deposit = parseFloat(document.getElementById('deposit').value);
+            var depositFrequency = parseInt(document.getElementById('depositFrequency').value);
+            var rate = parseFloat(document.getElementById('rate').value) / 100;
+            var time = parseFloat(document.getElementById('time').value);
+            var calculationType = document.getElementById('calculationType').value;
+
+            // Convert annual rate to effective rate based on deposit frequency
+            var effectiveRate = (1 + rate / depositFrequency) ** depositFrequency - 1;
+
+            var resultTable = document.getElementById('resultTable');
+            var pieChartCanvas = document.getElementById('pieChart');
+
+            var result = [];
+
+            switch (calculationType) {
+                case 'savings':
+                    result = calculateSavings(principal, effectiveRate, time);
+                    break;
+                case 'time':
+                    result = calculateTime(principal, deposit, depositFrequency, effectiveRate);
+                    break;
+                case 'periodicSaving':
+                    result = calculatePeriodicSaving(principal, deposit, depositFrequency, effectiveRate, time);
+                    break;
+                case 'interestRate':
+                    result = calculateInterestRate(principal, deposit, depositFrequency, effectiveRate, time);
+                    break;
+                default:
+                    resultTable.innerHTML = "Invalid calculation type";
+                    return;
+            }
+            var savingsAmount = result[result.length - 1].balance;
+            document.getElementById('savingsAmount').innerText = savingsAmount + ' €';
+            document.getElementById('monthlyDeposit').innerText = deposit.toFixed(2) + ' €';
+            document.getElementById('savingYears').innerText = time;
+            // Display the result in a table
+            // Display the result in a table
+            var tableContent = '<table class="table table-bordered"><thead><tr><th>Año</th><th>Depósito Periódicos</th><th>Depósitos totales</th><th>Interés total</th><th>Balance</th></tr></thead><tbody>';
+
+            for (var i = 0; i < result.slice(0, time).length; i++) {
+                tableContent += '<tr>';
+                tableContent += '<td>' + (i + 1) + '</td>'; // Display weeks
+                tableContent += '<td>' + result[i].deposits + '</td>';
+                tableContent += '<td>' + result[i].totalDeposits + '</td>';
+                tableContent += '<td>' + result[i].totalInterest + '</td>';
+                tableContent += '<td>' + result[i].balance + '</td>';
+                tableContent += '</tr>';
+            }
+
+            tableContent += '</tbody></table>';
+
+
+            resultTable.innerHTML = tableContent;
+
+            // Create a pie chart
+            var pieChart = new Chart(pieChartCanvas, {
+                type: 'pie',
+                data: {
+                    labels: ['Balance Inicial', 'Depósito Periódicos', 'Interés total'],
+                    datasets: [{
+                        data: [principal, deposit, result.reduce((total, item) => total + item.totalInterest, 0)],
+                        backgroundColor: ['rgb(255, 99, 132)', 'rgb(75, 192, 192)', 'rgb(255, 205, 86)'],
+                    }],
+                },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    title: {
+                        display: true,
+                        text: 'Distribution of Funds',
+                    },
+                },
+            });
+        }
+
+        function calculateSavings(principal, effectiveRate, time) {
+            var result = [];
+            var balance = principal;
+            var totalDeposits = 0;
+
+            // Assuming weekly frequency
+            var periodicDeposit = principal; // Initialize periodic deposit to the initial deposit value
+
+            for (var i = 1; i <= time * 52; i++) {
+                var interest = balance * effectiveRate;
+                balance = balance + interest;
+
+                result.push({
+                    year: Math.ceil(i / 52), // Adjusting for weekly frequency
+                    deposits: (i === 0) ? (principal + interest).toFixed(2) : periodicDeposit.toFixed(2),
+                    totalDeposits: totalDeposits.toFixed(2),
+                    totalInterest: interest.toFixed(2),
+                    balance: balance.toFixed(2)
+                });
+
+                totalDeposits += periodicDeposit; // Accumulate the periodic deposit
+            }
+
+            // Trim the result array to include only the specified number of years
+            result = result.slice(0, time * 52);
+
+            return result;
+        }
+
+
+
+
+        function calculateTime(principal, deposit, depositFrequency, effectiveRate) {
+            var result = [];
+            var balance = principal;
+            var totalDeposits = 0;
+            var depositTiming = document.getElementById('depositTiming').value;
+
+            for (var i = 1; balance > 0; i++) {
+                var interest = balance * effectiveRate;
+
+                if (depositTiming === 'end') {
+                    balance = balance + interest + (deposit * depositFrequency);
+                    totalDeposits += deposit * depositFrequency;
+                } else if (depositTiming === 'start') {
+                    totalDeposits += deposit * depositFrequency;
+                    balance = balance + interest + (deposit * depositFrequency);
+                }
+
+                result.push({
+                    year: i,
+                    deposits: (deposit * depositFrequency).toFixed(2),
+                    totalDeposits: totalDeposits.toFixed(2),
+                    totalInterest: interest.toFixed(2),
+                    balance: balance.toFixed(2)
+                });
+            }
+
+            return result;
+        }
+
+
+        function calculatePeriodicSaving(principal, deposit, depositFrequency, effectiveRate, time) {
+            var result = [];
+            var balance = principal;
+            var totalDeposits = 0;
+
+            for (var i = 1; i <= time; i++) {
+                var interest = balance * effectiveRate;
+                balance = balance + interest + (deposit * depositFrequency);
+                totalDeposits += deposit * depositFrequency;
+
+                result.push({
+                    year: i,
+                    deposits: (deposit * depositFrequency).toFixed(2),
+                    totalDeposits: totalDeposits.toFixed(2),
+                    totalInterest: interest.toFixed(2),
+                    balance: balance.toFixed(2)
+                });
+            }
+
+            return result;
+        }
+
+
+        function calculateInterestRate(principal, deposit, depositFrequency, effectiveRate, time) {
+            var result = [];
+            var balance = principal;
+            var totalDeposits = 0;
+
+            for (var rate = effectiveRate; rate <= 1; rate += 0.01) {
+                balance = principal;
+                totalDeposits = 0;
+
+                for (var i = 1; i <= time; i++) {
+                    var interest = balance * rate;
+                    balance = balance + interest + (deposit * depositFrequency);
+                    totalDeposits += deposit * depositFrequency;
+                }
+
+                if (balance >= 0) {
+                    result.push({
+                        rate: (rate * 100).toFixed(2),
+                        deposits: (deposit * depositFrequency).toFixed(2),
+                        totalDeposits: totalDeposits.toFixed(2),
+                        totalInterest: (balance - principal - totalDeposits).toFixed(2),
+                        balance: balance.toFixed(2)
+                    });
+                }
+            }
+
+            return result;
+        }
+
+
+    </script>
+
 </body>
 
 </html>
