--- a/index.html
+++ b/index.html
@@ -147,20 +147,28 @@
     </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script id="custom-chart-colors" nonce="12VbAnSVtDU/IxFFXg8D9A==">
+        //<![CDATA[
+
+        window.bar_chart_initial_balance_color = '#c257e0'; window.bar_chart_periodic_deposits_color = '#4850e0'; window.bar_chart_interest_color = '#29cc70'; window.pie_chart_initial_balance_color = '#c257e0'; window.pie_chart_periodic_deposits_color = '#4850e0'; window.pie_chart_interest_color = '#29cc70'; window.results_box_text_color = '#333333';
+
+        //]]>
+    </script>
     <title>Savings Calculator</title>
 </head>
 
-<body class="container mx-auto py-4 px-4">
+<body class="w-full mx-auto py-4 px-4">
 
     <div class="splash">
         <div class="inner">
             <div class="spinner"></div>
         </div>
     </div>
-    <div class="row px-3">
+    <div class=" px-3">
         <div class="col-xs-12">
             <div class="rounded-box input-box clearfix" id="calculator-form" action="" accept-charset="UTF-8"
                 data-remote="true" method="post">
@@ -446,8 +454,7 @@
                         <div class="row">
                             <div class="col-xs-8 col-lg-5">
                                 <span class="color-swatch periodic-deposits"></span><span
-                                    class="swatch-aligned">Depósito
-                                    Periódicos:</span>
+                                    class="swatch-aligned">Depósito Periódicos:</span>
                             </div>
                             <div class="col-xs-4 col-lg-7">
                                 12.000,00 €
@@ -463,131 +470,71 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="col-xs-12 col-sm-5 col-md-4">
+                    <div class="col-xs-12 col-sm-5 col-md-4">
                         <div class="small-pie-chart-container">
                             <canvas id="value-split-chart"></canvas>
                         </div>
                         <div class="v-offset-3 visible-xs"></div>
-                    </div> -->
+                    </div>
                 </div>
-                <!-- <div class="bar-chart-container">
+                <div class="bar-chart-container">
                     <canvas id="growth-chart"></canvas>
                 </div>
-                <div id="amortization"></div> -->
-                <script>
-                    document.addEventListener('DOMContentLoaded', function () {
-                        // Set initial values
-                        document.getElementById('fv-initial-balance').value = '1000.00';
-                        document.getElementById('nper-initial-balance').value = '1000.00';
-                        document.getElementById('pmt-initial-balance').value = '1000.00';
-                        document.getElementById('rate-initial-balance').value = '1000.00';
+                <div id="amortization">
+                    <table id="amortization-table" class="table">
+                        <thead>
+                            <tr>
+                                <th>Año</th>
+                                <th>Depósito Periódicos</th>
+                                <th>Depósitos totales</th>
+                                <th>Interés total</th>
+                                <th>Balance</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Amortization table rows will be appended here -->
+                        </tbody>
+                    </table>
+                </div>
+                <script nonce="12VbAnSVtDU/IxFFXg8D9A==">
 
-                        document.getElementById('fv-deposit-frequency').value = '12';
-                        document.getElementById('nper-deposit-frequency').value = '12';
-                        document.getElementById('pmt-deposit-frequency').value = '12';
-                        document.getElementById('rate-deposit-frequency').value = '12';
+                    //<![CDATA[
 
-                        document.getElementById('fv-deposit-timing').value = '1';
-                        document.getElementById('nper-deposit-timing').value = '1';
-                        document.getElementById('pmt-deposit-timing').value = '1';
-                        document.getElementById('rate-deposit-timing').value = '1';
 
-                        if (!document.getElementById('solve-rate-fields').style.display) {
-                            document.getElementById('fv-interest-rate').value = '1.000';
-                            document.getElementById('nper-interest-rate').value = '1.000';
-                            document.getElementById('pmt-interest-rate').value = '1.000';
-                        }
-
-                        if (!document.getElementById('solve-pmt-fields').style.display) {
-                            document.getElementById('fv-periodic-deposit').value = '100.00';
-                            document.getElementById('nper-periodic-deposit').value = '100.00';
-                            document.getElementById('rate-periodic-deposit').value = '100.00';
-                        }
-
-                        if (!document.getElementById('solve-nper-fields').style.display) {
-                            document.getElementById('fv-term').value = '10';
-                            document.getElementById('pmt-term').value = '10';
-                            document.getElementById('rate-term').value = '10';
-                        }
-
-                        if (!document.getElementById('solve-fv-fields').style.display) {
-                            document.getElementById('nper-goal').value = '10000.00';
-                            document.getElementById('pmt-goal').value = '10000.00';
-                            document.getElementById('rate-goal').value = '10000.00';
-                        }
-
-                        // Check if the value-split-chart is visible
-                        if (document.getElementById('value-split-chart').style.display !== 'none') {
-                            var pc_initial_balance_color = typeof window.pie_chart_initial_balance_color !== 'undefined' ? window.pie_chart_initial_balance_color : '#428bca';
-                            var pc_periodic_deposits_color = typeof window.pie_chart_periodic_deposits_color !== 'undefined' ? window.pie_chart_periodic_deposits_color : '#9ECAE1';
-                            var pc_interest_color = typeof window.pie_chart_interest_color !== 'undefined' ? window.pie_chart_interest_color : '#979797';
-                            var data = {
-                                datasets: [{
-                                    data: [
-                                        1000.0,
-                                        12000.0,
-                                        730.62
-                                    ],
-                                    backgroundColor: [
-                                        pc_initial_balance_color,
-                                        pc_periodic_deposits_color,
-                                        pc_interest_color
-                                    ]
-                                }],
-                                labels: [
-                                    'Balance Inicial',
-                                    'Depósito Periódicos',
-                                    'Interés'
-                                ]
-                            };
-                            draw_pie_chart(data);
-                        }
-
-                        // Amortization data
-                        var amortizationData = [{
-                            "year": 1,
-                            "initial_balance": 1000.0,
-                            "periodic_deposits": 1200.0,
-                            "total_deposits": 2200.0,
-                            "total_interest": 16.57,
-                            "balance": 2216.57
-                        },
-                            // Add more data here...
+                    jQuery(function () {
+                        var amortizationData = [
+                            // Your amortization data here
+                            { "year": 1, "periodic_deposits": 1200.00, "total_deposits": 2200.00, "total_interest": 16.57, "balance": 2216.57 },
+                            { "year": 2, "periodic_deposits": 1200.00, "total_deposits": 3400.00, "total_interest": 45.35, "balance": 3445.35 },
+                            { "year": 3, "periodic_deposits": 1200.00, "total_deposits": 4600.00, "total_interest": 86.49, "balance": 4686.49 },
+                            { "year": 4, "periodic_deposits": 1200.00, "total_deposits": 5800.00, "total_interest": 140.09, "balance": 5940.09 },
+                            { "year": 5, "periodic_deposits": 1200.00, "total_deposits": 7000.00, "total_interest": 206.28, "balance": 7206.28 },
+                            { "year": 6, "periodic_deposits": 1200.00, "total_deposits": 8200.00, "total_interest": 285.19, "balance": 8485.19 },
+                            { "year": 7, "periodic_deposits": 1200.00, "total_deposits": 9400.00, "total_interest": 376.95, "balance": 9776.95 },
+                            { "year": 8, "periodic_deposits": 1200.00, "total_deposits": 10600.00, "total_interest": 481.69, "balance": 11081.69 },
+                            { "year": 9, "periodic_deposits": 1200.00, "total_deposits": 11800.00, "total_interest": 599.54, "balance": 12399.54 },
+                            { "year": 10, "periodic_deposits": 1200.00, "total_deposits": 13000.00, "total_interest": 730.62, "balance": 13730.62 }
                         ];
 
-                        // Check if the growth-chart is visible
-                        if (document.getElementById('growth-chart').style.display !== 'none') {
-                            draw_bar_chart(amortizationData);
+                        var tbody = $('#amortization-table tbody');
 
-                            draw_amortization_table('amortization', [{
-                                'title': 'Año',
-                                'data_key': 'year'
-                            },
-                            {
-                                'title': 'Depósito Periódicos',
-                                'data_key': 'periodic_deposits',
-                                'format': 1
-                            },
-                            {
-                                'title': 'Depósitos totales',
-                                'data_key': 'total_deposits',
-                                'format': 1
-                            },
-                            {
-                                'title': 'Interés total',
-                                'data_key': 'total_interest',
-                                'format': 1
-                            },
-                            {
-                                'title': 'Balance',
-                                'data_key': 'balance',
-                                'format': 1
-                            }
-                            ], amortizationData, {});
-                        }
+                        // Clear existing rows
+                        tbody.empty();
+
+                        // Populate table with data
+                        $.each(amortizationData, function (index, row) {
+                            var tr = $('<tr>');
+                            $.each(row, function (key, value) {
+                                var td = $('<td>').text(value);
+                                tr.append(td);
+                            });
+                            tbody.append(tr);
+                        });
                     });
-                </script>
 
+
+                    //]]>
+                </script>
             </div>
 
 
@@ -805,88 +752,7 @@
             toggleFields();
         });
     </script>
-    <!-- <script>
-    document.addEventListener('DOMContentLoaded', function () {
-        document.getElementById('calculate-button').addEventListener('click', function (event) {
-            event.preventDefault(); // Prevent the default form submission
 
-            // Perform calculations and draw charts here
-            drawCharts();
-        });
-    });
-
-    function drawCharts() {
-        // Sample data for pie chart
-        var pieChartData = {
-            datasets: [{
-                data: [
-                    1000.0,
-                    12000.0,
-                    730.62
-                ],
-                backgroundColor: [
-                    '#428bca', // pc_initial_balance_color
-                    '#9ECAE1', // pc_periodic_deposits_color
-                    '#979797' // pc_interest_color
-                ]
-            }],
-            labels: [
-                'Balance Inicial',
-                'Depósito Periódicos',
-                'Interés'
-            ]
-        };
-
-        // Sample data for bar chart
-        var amortizationData = [
-            {
-                "year": 1,
-                "initial_balance": 1000.0,
-                "periodic_deposits": 1200.0,
-                "total_deposits": 2200.0,
-                "total_interest": 16.57,
-                "balance": 2216.57
-            },
-            // Other data points...
-        ];
-
-        // Draw pie chart
-        var pieChartCanvas = document.createElement('canvas');
-        pieChartCanvas.setAttribute('id', 'pie-chart');
-        document.getElementById('result').appendChild(pieChartCanvas);
-        var pieChartCtx = pieChartCanvas.getContext('2d');
-        new Chart(pieChartCtx, {
-            type: 'pie',
-            data: pieChartData
-        });
-
-        // Draw bar chart
-        var barChartCanvas = document.createElement('canvas');
-        barChartCanvas.setAttribute('id', 'bar-chart');
-        document.getElementById('result').appendChild(barChartCanvas);
-        var barChartCtx = barChartCanvas.getContext('2d');
-        new Chart(barChartCtx, {
-            type: 'bar',
-            data: {
-                labels: amortizationData.map(data => data.year),
-                datasets: [{
-                    label: 'Balance',
-                    data: amortizationData.map(data => data.balance),
-                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    y: {
-                        beginAtZero: true
-                    }
-                }
-            }
-        });
-    }
-</script> -->
 
 </body>
 
